# test_repos

.github/: dontingestme.md
.github/php_test/: Main.php
c_test/: main.c  utils.c  utils.h
cpp_test/: main.cpp  math_ops.cpp  math_ops.h
java_test/: Calculator.java  Main.java
java_test/utils/: StringUtils.java
js_test/: app.js  helpers.js
md_test/: vscode.md
php_test/: Helper.php
python_test/: main.py  utils.py
text_test/: docker.yml  dummy.html  ilikejsons.json  package.json  pom.xml  pyproject.toml  requirements.txt  win11clone.html
ts_test/: service.ts  types.ts
tsx_test/: App.tsx  Button.tsx
